<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Konobar</string>
    <string name="app_acceptedDigits">1234567890</string>
    
    <string name="Synchronize">Sinhroniziraj</string>
    <string name="LogInOut">(Od)logiraj se</string>
    
    <string name="Pin">Pin</string>
    <string name="OK">OK</string>
    
    <string name="SelectTable">Odaberi stol</string>
    <string name="SendOrder">Pošalji narudžbu</string>
    
    <string name="Table">Stol</string>
    
    <string name="Favorites">Top</string>
    <string name="ArticleId">Šifra</string>    
    
    <string name="PlusSign">+</string>
    <string name="MinusSign">-</string>
    
    <string name="Filter">Filter</string>
    <string name="AddArticle">Dodaj art.</string>
    
    <string name="Storno">Storno</string>
    <string name="DoStorno">Storniraj</string>
</resources>
