<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="0dp" android:layout_width="0dp" android:focusable="true" android:focusableInTouchMode="true"></LinearLayout><Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="left|center_vertical" android:background="@drawable/spinner_button" android:id="@+id/ButtonSelectTable" android:text="@string/SelectTable"></Button><ScrollView android:id="@+id/ScrollView01" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_weight="1.0"><LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" android:id="@+id/LinearLayoutItems" android:orientation="vertical"></LinearLayout></ScrollView>




<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent"><EditText android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_width="fill_parent" android:lines="1" android:hint="@string/ArticleId" android:id="@+id/EditTextArticleId" android:inputType="phone" android:digits="@string/app_acceptedDigits"></EditText><Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ButtonAddArticle" android:layout_weight="1.0" android:text="@string/AddArticle"></Button><Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1.0" android:text="@string/Favorites" android:id="@+id/ButtonAddFavorite"></Button></LinearLayout><Button android:layout_height="wrap_content" android:id="@+id/ButtonSendOrder" android:layout_width="fill_parent" android:text="@string/SendOrder"></Button>



</LinearLayout>
